# sirt

./: Cargo.toml  README.md
examples/: one.ro  one.sirt  package.sirt
libsirt/: Cargo.toml  README.md
libsirt/grammar/: grammar.pest
libsirt/src/: de.rs  error.rs  lib.rs  parser.rs  se.rs
libsirt/tests/: sirt_test.rs
sirt/: Cargo.toml  README.md
sirt/src/: cli.rs  gui.rs  main.rs  sirt.rs  tui.rs
