[package]
name = "libsirt"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Library to serialize and deserialize from the Sirt data format"
homepage = ""
repository = "https://github.com/rohankid1/sirt"
readme = "README.md"
keywords = ["parser", "sirt"]
categories = ["parser-implementations"]

exclude = [
    "tests/*"
]

[dependencies]
pest = "2.8.5"
pest_derive = "2.8.5"
serde = { version = "1.0.228", features = ["derive"] }
