[package]
name = "sirt"
version = "0.2.0"
edition = "2024"
license = "MIT or Apache-2.0"
description = "GUI or TUI analyzer for libsirt"
homepage = "https://github.com/rohankid1/sirt"
repository = "https://github.com/rohankid1/sirt"
readme = "README.md"

[dependencies]
libsirt = { path = "../libsirt" }

clap = {  version = "4.5.54", features = ["derive"] }
ratatui = "0.30.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
color-eyre = "0.6.5"
iced = { version = "0.14.0", features = ["highlighter"] }
